# espressif-trainings

./: .gitignore
book/src/: 02_2_software.md  02_4_hello_board.md
common/lib/get-uuid/: Cargo.toml
common/lib/rgb-led/: Cargo.toml
common/lib/rgb-led/.cargo/: config.toml
common/lib/wifi/: Cargo.toml
common/lib/wifi/.cargo/: config.toml
common/lib/wifi/examples/: wifi.rs
common/lib/wifi/src/: lib.rs
intro/hardware-check/: Cargo.toml
intro/hardware-check/.cargo/: config.toml
intro/hardware-check/src/: main.rs
intro/http-client/: Cargo.toml
intro/http-client/examples/: http_client.rs  https_client.rs
intro/http-server/: Cargo.toml
intro/http-server/examples/: http_server.rs
intro/http-server/src/: main.rs
intro/mqtt/exercise/: Cargo.toml
intro/mqtt/exercise/examples/: solution_publ.rs  solution_publ_rcv.rs
intro/mqtt/host-client/: Cargo.toml  cfg.toml.example
intro/mqtt/host-client/src/: main.rs
